Update bower plugin name.

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "adapt-introcover",
-  "version": "0.0.0",
+  "name": "adapt-introcover-menu",
+  "version": "1.0.0",
   "homepage": "http://github.com/deltanet/adapt-introcover-menu",
   "authors": [
     "Salamat Ali",
