--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "adapt-introcover",
-  "version": "0.0.1",
+  "name": "adapt-introcover-menu",
+  "version": "1.0.0",
   "description": "",
   "main": "",
   "scripts": {
