--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "adapt-cover-menu",
+  "name": "adapt-cover-menu-audio",
   "version": "2.0.2",
   "framework": "^2.0.0",
   "homepage": "http://github.com/deltanet/adapt-cover-menu",
-  "displayName": "Cover menu",
-  "menu": "introcover",
+  "displayName": "Cover menu audio",
+  "menu": "introcoveraudio",
   "description": "",
   "main": "js/adapt-cover.js",
   "keywords": [
@@ -12,5 +12,5 @@
     "adapt-menu"
   ],
   "license": "GPL-3.0",
-  "targetAttribute": "_coverMenu"
+  "targetAttribute": "_coverMenuAudio"
 }
