--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "adapt-cover-menu-audio",
   "version": "2.0.6",
   "framework": "^2.0.0",
-  "homepage": "http://github.com/deltanet/adapt-cover-menu",
+  "homepage": "https://github.com/deltanet/adapt-cover-menu-audio",
   "displayName": "Cover menu audio",
   "menu": "introcoveraudio",
   "description": "",
