--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "adapt-cover-menu-audio",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "framework": "^2.0.0",
   "homepage": "https://github.com/deltanet/adapt-cover-menu-audio",
   "displayName": "Cover menu audio",
-  "menu": "introcoveraudio",
+  "menu": "coverMenuAudio",
   "description": "A carousel-style menu",
   "main": "js/adapt-cover-audio.js",
   "keywords": [
