--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "adapt-cover-menu-audio",
   "version": "2.1.3",
-  "framework": "^2.0.0",
+  "framework": ">=4",
   "homepage": "https://github.com/deltanet/adapt-cover-menu-audio",
   "displayName": "Cover menu audio",
   "menu": "coverMenuAudio",
