--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "adapt-cover-menu-audio",
-  "version": "4.1.0",
-  "framework": ">=4",
+  "version": "5.0.0",
+  "framework": ">=5",
   "homepage": "https://github.com/deltanet/adapt-cover-menu-audio",
   "displayName": "Cover menu audio",
   "menu": "coverMenuAudio",
@@ -11,6 +11,6 @@
     "adapt-plugin",
     "adapt-menu"
   ],
-  "license": "GPLv3",
+  "license": "GPL-3.0",
   "targetAttribute": "_coverMenuAudio"
 }
